# pdf-extraction-rpa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  justfile  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: dependabot.yml
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile  start
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
pdf_extraction/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
pdf_extraction/migrations/: 0001_initial.py  0002_alter_pdfextractionitem_options_and_more.py  0003_alter_pdfextraction_created_by_and_more.py  0004_alter_pdfextraction_created_by_and_more.py  0005_alter_pdfextraction_customer_id.py
regex_engine/: admin.py  apps.py  models.py
regex_engine/migrations/: 0001_initial.py  0002_alter_customerregexrule_regex_group.py  0003_customerregexrule_is_item_field_and_more.py  0004_customerregexrule_regex_pattern_v2_and_more.py
rpa_project/: conftest.py  unfold_utils.py
rpa_project/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
rpa_project/templates/: base.html
rpa_project/users/: adapters.py  apps.py  models.py  views.py
rpa_project/users/api/: serializers.py  views.py
rpa_project/users/migrations/: 0001_initial.py
rpa_project/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
rpa_project/users/tests/api/: test_urls.py  test_views.py
